# dnf-plugins-core

./: .gitignore  .packit.yaml  AUTHORS  CMakeLists.txt  Makefile  README.rst  builddep.html  copr.html  debuginfo-install.html  dnf-plugins-core.spec  download.html  generate-completion-cache.html  generate_completion_cache.html  genindex.html  index.html  kickstart.html  needs_restarting.html  noroot.html  objects.inv  protected_packages.html  release_notes.html  repoquery.html  reposync.html  search.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: ci.yml
.tx/: config
_sources/: builddep.txt  generate-completion-cache.txt  index.txt  kickstart.txt  protected_packages.txt  release_notes.txt  repoquery.txt
bash-completion/: dnf-completion.bash
doc/: CMakeLists.txt  bootc.rst  builddep.rst  changelog.rst  conf.py  config_manager.rst  copr.rst  debug.rst  debuginfo-install.rst  dnf-utils.rst  download.rst  expired-pgp-keys.rst  generate-completion-cache.rst  generate_completion_cache.rst  groups-manager.rst  index.rst  kickstart.rst  leaves.rst  local.rst  manifest.rst  migrate.rst  modulesync.rst  multisig.rst  needs_restarting.rst  noroot.rst  package-cleanup.rst  post-transaction-actions.rst  pre-transaction-actions.rst  protected_packages.rst  release_notes.rst  repoclosure.rst  repodiff.rst  repograph.rst  repomanage.rst  repoquery.rst  reposync.rst  rhbug.py  show-leaves.rst  summaries_cache  system-upgrade.rst  (+2 more)
etc/: CMakeLists.txt
etc/dnf/: CMakeLists.txt
etc/dnf/plugins/: CMakeLists.txt  copr.conf  debuginfo-install.conf  expired-pgp-keys.conf  local.conf  post-transaction-actions.conf  pre-transaction-actions.conf  versionlock.conf
etc/dnf/plugins/copr.d/: CMakeLists.txt
etc/dnf/plugins/post-transaction-actions.d/: CMakeLists.txt
etc/dnf/plugins/pre-transaction-actions.d/: CMakeLists.txt
etc/dnf/protected.d/: CMakeLists.txt
etc/systemd/: CMakeLists.txt  dnf-system-upgrade-cleanup.service  dnf-system-upgrade.service
libexec/: CMakeLists.txt  dnf-utils.in
package/: archive  dnf-plugins-core.spec
plugins/: CMakeLists.txt  Makefile  aliases.py  bootc.py  builddep.py  changelog.py  config_manager.py  copr.py  debug.py  debuginfo-install.py  download.py  expired-pgp-keys.py  expired_gpg_keys.py  expired_pgp_keys.py  generate_completion_cache.py  ghost.py  groups_manager.py  kickstart.py  leaves.py  local.py  manifest.py  migrate.py  modulesync.py  multisig.py  needs_restarting.py  noroot.py  oci_repo.py  post-transaction-actions.py  pre-transaction-actions.py  protected_packages.py  query.py  refresh_packagekit.py  repoclosure.py  repodiff.py  repograph.py  repomanage.py  repoquery.py  reposync.py  show_leaves.py  system_upgrade.py  (+1 more)
plugins/dnfplugins/: Makefile  __init__.py
plugins/dnfpluginscore/: CMakeLists.txt  __init__.py  lib.py
po/: CMakeLists.txt  Makefile  POTFILES.in  bg.po  ca.po  cs.po  da.po  de.po  dnf-plugins-core.pot  es.po  eu.po  fi.po  fr.po  fur.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  mr.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  si.po  sk.po  sq.po  sr.po  sv.po  tr.po  uk.po  zanata.xml  zh_CN.po  zh_TW.po
rel-eng/: releasers.conf  tito.props
scripts/: lint  pylint_false_positives
tests/: CMakeLists.txt  README  support.py  test_builddep.py  test_config_manager.py  test_download.py  test_kickstart.py  test_needs_restarting.py  test_protected_packages.py  test_query.py  test_repoclosure.py  test_repodiff.py  test_repograph.py  test_repomanage.py  test_repoquery.py  test_reposync.py  test_system_upgrade.py
tests/dnfpluginscore/: test_lib.py
tests/resources/: tour-4-6.src.rpm  tour.spec
tests/resources/repoclosure/noarch/: foo-4-6.noarch.rpm
tests/resources/repograph/: bar.spec  foo.spec
tests/resources/repograph/noarch/: bar-4-6.noarch.rpm  foo-4-6.noarch.rpm
tests/resources/repomanage/: foo-4-6.src.rpm  foo-4-7.src.rpm  foo-4-8.src.rpm  foo.spec
tests/resources/repomanage/noarch/: foo-4-6.noarch.rpm  foo-4-7.noarch.rpm  foo-4-8.noarch.rpm
